chore: swagger clean up
