# docs/swagger.yaml
@@ -42,6 +42,8 @@ definitions:
         type: integer
       charger_id:
         type: integer
+      chargerAddress:
+        type: string
       coupon:
         type: string
       email:
@@ -52,8 +54,14 @@ definitions:
         type: number
       id:
         type: integer
+      normalRate:
+        type: number
       paymentStatus:
         type: string
+      providerId:
+        type: integer
+      rateId:
+        type: integer
       start_time:
         type: string
       status:
@@ -284,7 +292,32 @@ paths:
       summary: Create User Payment
       tags:
       - user payment
-  /payment/user/{booking_id}:
+  /payment/user/booking:
+    get:
+      consumes:
+      - application/json
+      description: get all user payments by user email address
+      parameters:
+      - description: jwtToken of the user
+        in: header
+        name: authentication
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: returns a map of user payment for, pending and completed
+          schema:
+            additionalProperties:
+              items:
+                $ref: '#/definitions/dto.UserPayment'
+              type: array
+            type: object
+      summary: Get All User Payments by user
+      tags:
+      - user payment
+  /payment/user/booking/{booking_id}:
     delete:
       consumes:
       - application/json
@@ -352,7 +385,7 @@ paths:
       summary: Update User Payment
       tags:
       - user payment
-  /payment/user/completed/{booking_id}:
+  /payment/user/completed:
     post:
       consumes:
       - application/json
@@ -370,32 +403,7 @@ paths:
           description: returns a success message
           schema:
             type: string
-      summary: Complete User Payment
-      tags:
-      - user payment
-  /payment/user/getAllBooking:
-    get:
-      consumes:
-      - application/json
-      description: get all user payments by user email address
-      parameters:
-      - description: jwtToken of the user
-        in: header
-        name: authentication
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: returns a map of user payment for, pending and completed
-          schema:
-            additionalProperties:
-              items:
-                $ref: '#/definitions/dto.UserPayment'
-              type: array
-            type: object
-      summary: Get All User Payments by user
+      summary: Complete User Payment and save a record as invoice
       tags:
       - user payment
 schemes:
